cleanup some responsive layout issues with the navbar

--- a/public/css/src/bootstrap.less
+++ b/public/css/src/bootstrap.less
@@ -8,7 +8,7 @@
 @grid-columns: 24;
 @grid-gutter-width: 0;
 
-@grid-float-breakpoint: @screen-sm-min;
+@grid-float-breakpoint: 0;
 
 
 @font-family-sans-serif:  "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
