--- a/public/css/src/theme.less
+++ b/public/css/src/theme.less
@@ -1,14 +1,42 @@
 
-
 body {
 	padding-bottom: 60px;
 }
 
-.navbar-brand {
-	margin: 0;
-	padding: 0;
-	line-height: 50px;
+
+
+.navbar-header {
+	display: table;
+
+	.navbar-brand {
+		margin: 0;
+		padding: 0;
+		height: 50px;
+		display: table-cell;
+		vertical-align: middle;
+
+		img {
+			margin-top: 7px;
+			max-width: 35vw;
+		}
+	}
 }
+
+
+
+.navbar-nav {
+	font-size: 8pt;
+	@media(min-width: @screen-xs-min) { font-size: 10pt; }
+
+	li > a {
+		line-height: 50px;
+		margin: 0;
+
+		padding: 0 3vw;
+		@media(min-width: @screen-xs-min) { padding: 0 1.5em; }
+	}
+}
+
 
 
 .team {
